[package]
name = "ocular-vpn"
version = "0.1.0"
edition = "2024"
description = "CLI bridge for SSO authentication with OpenConnect/AnyConnect VPNs"
license = "AGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/khoek/ocular-vpn"
keywords = ["vpn", "openconnect", "anyconnect", "sso", "cli"]
default-run = "ocular"
autobins = false

[[bin]]
name = "ocular"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = "0.12"
headless_chrome = "1"
indicatif = "0.18"
libc = "0.2"
quick-xml = { version = "0.39", features = ["escape-html"] }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "cookies", "rustls", "socks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "8"
